--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.0.12",
+    "@types/three": "^0.174.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.12",
+    "three": "^0.174.0",
+    "three-stdlib": "^2.35.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
