--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.0.12",
     "@types/three": "^0.174.0",
+    "axios": "^1.8.3",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.12",
