--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.8.3",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "t-writer.js": "^1.0.4",
     "tailwindcss": "^4.0.12",
     "three": "^0.174.0",
     "three-stdlib": "^2.35.14",
