--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "axios": "^1.8.3",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
-    "t-writer.js": "^1.0.4",
     "tailwindcss": "^4.0.12",
     "three": "^0.174.0",
     "three-stdlib": "^2.35.14",
@@ -36,6 +35,7 @@
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
